fix(ui): push CSS mask gradient down to 85% on mobile to reveal the full curved hull of the ship

--- a/interactive-ship/css/style.css
+++ b/interactive-ship/css/style.css
@@ -173,12 +173,12 @@ body {
 
     .ship-overlay {
         width: 26.3%;
-        -webkit-mask-image: linear-gradient(to bottom, black 0%, black calc(61% - var(--sink-mask-offset-pct, 0%)), transparent calc(67.9% - var(--sink-mask-offset-pct, 0%)));
-        mask-image: linear-gradient(to bottom, black 0%, black calc(61% - var(--sink-mask-offset-pct, 0%)), transparent calc(67.9% - var(--sink-mask-offset-pct, 0%)));
+        -webkit-mask-image: linear-gradient(to bottom, black 0%, black calc(85% - var(--sink-mask-offset-pct, 0%)), transparent calc(95% - var(--sink-mask-offset-pct, 0%)));
+        mask-image: linear-gradient(to bottom, black 0%, black calc(85% - var(--sink-mask-offset-pct, 0%)), transparent calc(95% - var(--sink-mask-offset-pct, 0%)));
     }
 
     #ship-sink {
-        -webkit-mask-image: linear-gradient(to bottom, black 0%, black calc(64.5% - var(--sink-mask-offset-pct, 0%)), transparent calc(67.9% - var(--sink-mask-offset-pct, 0%)));
-        mask-image: linear-gradient(to bottom, black 0%, black calc(64.5% - var(--sink-mask-offset-pct, 0%)), transparent calc(67.9% - var(--sink-mask-offset-pct, 0%)));
+        -webkit-mask-image: linear-gradient(to bottom, black 0%, black calc(85% - var(--sink-mask-offset-pct, 0%)), transparent calc(95% - var(--sink-mask-offset-pct, 0%)));
+        mask-image: linear-gradient(to bottom, black 0%, black calc(85% - var(--sink-mask-offset-pct, 0%)), transparent calc(95% - var(--sink-mask-offset-pct, 0%)));
     }
 }
